<resources>
    <string name="app_name">Mobile Software Engineer Exam Propelrr</string>
    <string name="full_name">Full name</string>
    <string name="submit">Submit</string>
    <string name="email_address">Email Address</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="gender">Gender</string>
    <string name="age">Age</string>

    <string-array name="gender">
        <item>Male</item>
        <item>Female</item>
    </string-array>
</resources>
