<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        android:orientation="vertical"
        tools:context=".MainActivity">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:fillViewport="true">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:clipToPadding="false"
                android:clipChildren="false"
                android:gravity="center"
                android:orientation="vertical"
                android:paddingBottom="12dp"
                android:paddingEnd="24dp"
                android:paddingStart="24dp"
                android:paddingTop="32dp">

                <com.jianastrero.mobilesoftwareengineerexampropelrr.view.ValidatableTextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/full_name">

                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        tools:text="Jian James P. Astrero" />

                </com.jianastrero.mobilesoftwareengineerexampropelrr.view.ValidatableTextInputLayout>

                <com.jianastrero.mobilesoftwareengineerexampropelrr.view.ValidatableTextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:hint="@string/email_address">

                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        tools:text="jianjamesastrero@gmail.com" />

                </com.jianastrero.mobilesoftwareengineerexampropelrr.view.ValidatableTextInputLayout>

                <com.jianastrero.mobilesoftwareengineerexampropelrr.view.ValidatableTextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:hint="@string/mobile_number">

                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" />

                </com.jianastrero.mobilesoftwareengineerexampropelrr.view.ValidatableTextInputLayout>

                <com.jianastrero.mobilesoftwareengineerexampropelrr.view.ValidatableTextInputLayout
                    style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox.ExposedDropdownMenu"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:hint="@string/gender">

                    <AutoCompleteTextView
                        android:id="@+id/filled_exposed_dropdown"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:editable="false"/>

                </com.jianastrero.mobilesoftwareengineerexampropelrr.view.ValidatableTextInputLayout>

                <com.jianastrero.mobilesoftwareengineerexampropelrr.view.ValidatableTextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:hint="@string/age"
                    android:focusable="false">

                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:focusable="false"/>

                </com.jianastrero.mobilesoftwareengineerexampropelrr.view.ValidatableTextInputLayout>

                <DatePicker
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:background="@color/white"
                    android:elevation="8dp" />

            </LinearLayout>

        </ScrollView>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:elevation="8dp">

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="12dp"
                android:layout_marginEnd="32dp"
                android:layout_marginStart="32dp"
                android:layout_marginTop="12dp"
                android:text="@string/submit" />

        </LinearLayout>

    </LinearLayout>

</layout>